# ik-rs

./: .trais.yml  .travis.yml  Cargo.toml  README.md
benches/: trie_bench.rs
examples/: verifier.rs
src/: lib.rs  tokenizer.rs
src/config/: default_config.rs
src/core/: char_util.rs  cjk_segmenter.rs  cn_quantifier_segmenter.rs  ik_arbitrator.rs  ik_segmenter.rs  letter_segmentor.rs  lexeme.rs  lexeme_path.rs  ordered_linked_list.rs  segmentor.rs
src/data/: text1.txt
src/dict/: dictionary.rs  hit.rs  trie.rs
tests/: test-tantivy-ik.rs
