[package]
name = "ik-rs"
version = "0.1.1"
authors = ["blueshen <zhiyi.shen@gmail.com>"]
license = "LGPL-2.1-only"
categories = ["database-implementations", "data-structures"]
description = """chinese segment, ik-analyzer for rust"""
documentation = "https://docs.rs/ik-rs"
homepage = "https://github.com/blueshen/ik-rs"
repository = "https://github.com/blueshen/ik-rs"
readme = "README.md"
keywords = ["search", "information", "retrieval", "tantivy", "ik-analyzer"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.11"
unicode-blocks = "0.1.4"
once_cell = "1.15.0"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.9.3"
phf = { version = "0.11", features = ["macros"] }
tantivy = { version = "0.18.1"}
lazy_static = "1.4.0"


[dev-dependencies]
log = "0.4.17"
env_logger = "0.9.3"
criterion = "0.4.0"

[[bench]]
name = "trie_bench"
harness = false

[[example]]
name = "verifier"
